--- a/.gitattributes
+++ b/.gitattributes
@@ -24,3 +24,4 @@
 *.epub filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
